# ConvolutionComparison

./: .gitignore  README.md  calc_vigra_features.py  compare.py  outputs.txt
Notes/: readme.txt  sheet.aux  sheet.out  sheet.tex  sheet.toc
cpp/: a.out  speed_test.cpp
cpp/af_convolution/: readme.txt
cpp/af_device_test/: main.cpp  readme.txt  run.py
cpp/af_mc_pi/: CMakeLists.txt  main2.cpp  readme.txt
cpp/arrayfire/convolution/: CMakeLists.txt  main.cpp
cpp/arrayfire/mc_pi/: main1.cpp  readme.txt
cpp/comparison/: a.out  compile.sh  compile_new.sh  main.cpp  main_new.cpp  plotscript  readme.txt  run.py
cpp/comparison/plotscripts/: cmp_single_multithread_sigma0.7_notebook  cmp_single_multithread_sigma1.0_notebook  cmp_single_multithread_sigma1.6_notebook  cmp_single_multithread_sigma10.0_notebook  cmp_single_multithread_sigma3.5_notebook  cmp_single_multithread_sigma5.0_notebook  gpu_bigheron  gpu_notebook  gpu_total_bigheron  gpu_total_notebook  plotscript  ratio_bigheron  ratio_notebook  ratio_notebook_multithread  sigma1_bigheron  sigma1_notebook  sizesigma
cpp/from_michaela/: readme.txt
cpp/separable_checklimits/: a.out  main.cpp  readme.txt
cpp/vigra/: main.cpp  readme.txt
python/: afconvolve.py  calc_vigra_features.py  compare.py  readme.txt  utilityfcts.py
python/gaussian_comparison/: compare.py  plotscript  readme.txt  run.py
python/hessianOfGaussian_comparison/: compare.py  readme.txt  run.py
python/separable_checklimits/: check.py  compare.py  readme.txt
report/: report.aux  report.tex  sheet.tex
(+28 files in other folders)
